k8s-gcp-chart/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend
spec:
  replicas: 1 # One pod will be killed when there is no load by HPA
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
        role: backend
    spec:
      containers:
        - name: backend-container
          image: kotonium/k8app-backend-image:1.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
#              memory: "128Mi"
            requests:
              cpu: "0.25" # gives 1/2 of the limit
#              memory: "64Mi"
