k8s-gcp-chart/templates/frontend-network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-network-policy
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
